[package]
name = "bulker-dex"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
thiserror = "1.0.50"
arrayref = "0.3.7"
ephemeral-rollups-sdk = { version = "0.2.1", features = ["anchor"] }
bs58 = "0.5"
solana-program = "2.1.7"
bytemuck = { version = "1.14", features = ["derive"] }


[lib]
crate-type = ["cdylib", "lib"]
